--- a/Engine/Spire.vcxproj.filters
+++ b/Engine/Spire.vcxproj.filters
@@ -37,12 +37,6 @@
     <Filter Include="Source Files\engine">
       <UniqueIdentifier>{060c8e7a-db0e-44db-a137-adfdd3c8c1c3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\engine\components">
-      <UniqueIdentifier>{00f08597-009b-4e5c-9ad9-9dc62001ffd0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\engine\components">
-      <UniqueIdentifier>{a587efc1-2204-4635-9bd9-2c9e4f5beec6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\engine\core">
       <UniqueIdentifier>{4bdc18b6-5715-44d6-bbc6-bad3e5ee6cf4}</UniqueIdentifier>
     </Filter>
@@ -88,9 +82,6 @@
     <Filter Include="Source Files\engine\scene">
       <UniqueIdentifier>{240e2886-b84d-4d0e-9e43-74c77291b196}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\engine\scene\scene">
-      <UniqueIdentifier>{6e1dc2d4-74fc-498c-bc68-4362341b4f2f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\engine\resources">
       <UniqueIdentifier>{dbcb454b-002e-49b8-be5a-c739e9c98c9a}</UniqueIdentifier>
     </Filter>
@@ -99,6 +90,24 @@
     </Filter>
     <Filter Include="Header Files\engine\scene\states">
       <UniqueIdentifier>{a445400d-e6de-433b-8363-a7828006fc0f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\engine\entity">
+      <UniqueIdentifier>{00e91190-d83d-4cbd-b73b-7299a7eee6fe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\engine\system">
+      <UniqueIdentifier>{d5a1f998-f22e-4e7d-a107-bb24c888231c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\engine\entity">
+      <UniqueIdentifier>{f12063f8-c9ff-4baa-88ba-5dc0e29fcd77}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\engine\system">
+      <UniqueIdentifier>{637add88-db9d-4bb9-b2f8-2409dde9209d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\engine\entity\components">
+      <UniqueIdentifier>{f7e2b4e3-019c-4177-b270-300ff93c02c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\engine\entity\components">
+      <UniqueIdentifier>{b7b5e440-868a-419d-a454-e27e4b5c945d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -128,15 +137,6 @@
     </ClInclude>
     <ClInclude Include="src\engine\Engine.h">
       <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\components\Component.h">
-      <Filter>Header Files\engine\components</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\components\CTransform.h">
-      <Filter>Header Files\engine\components</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\core\Entity.h">
-      <Filter>Header Files\engine\core</Filter>
     </ClInclude>
     <ClInclude Include="src\engine\core\EventManager.h">
       <Filter>Header Files\engine\core</Filter>
@@ -240,20 +240,35 @@
     <ClInclude Include="src\engine\scene\states\SplashState.h">
       <Filter>Header Files\engine\scene\states</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\System.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
     <ClInclude Include="src\engine\filesystem\TextureLoader.h">
       <Filter>Header Files\engine\filesystem</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\IComponent.h">
-      <Filter>Header Files\engine</Filter>
+    <ClInclude Include="src\engine\system\ISystem.h">
+      <Filter>Header Files\engine\system</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\ISystem.h">
-      <Filter>Header Files\engine</Filter>
+    <ClInclude Include="src\engine\system\System.h">
+      <Filter>Header Files\engine\system</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\IResource.h">
-      <Filter>Header Files\engine</Filter>
+    <ClInclude Include="src\engine\entity\Entity.h">
+      <Filter>Header Files\engine\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\entity\IComponent.h">
+      <Filter>Header Files\engine\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\entity\components\CTransform.h">
+      <Filter>Header Files\engine\entity\components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\entity\IOwnership.h">
+      <Filter>Header Files\engine\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\entity\IEntity.h">
+      <Filter>Header Files\engine\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\entity\IComponentContainer.h">
+      <Filter>Header Files\engine\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\entity\IUniqueIdentifier.h">
+      <Filter>Header Files\engine\entity</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -289,15 +304,6 @@
     </ClCompile>
     <ClCompile Include="src\engine\Engine.cpp">
       <Filter>Source Files\engine</Filter>
-    </ClCompile>
-    <ClCompile Include="src\engine\components\Component.cpp">
-      <Filter>Source Files\engine\components</Filter>
-    </ClCompile>
-    <ClCompile Include="src\engine\components\CTransform.cpp">
-      <Filter>Source Files\engine\components</Filter>
-    </ClCompile>
-    <ClCompile Include="src\engine\core\Entity.cpp">
-      <Filter>Source Files\engine\core</Filter>
     </ClCompile>
     <ClCompile Include="src\engine\core\EventManager.cpp">
       <Filter>Source Files\engine\core</Filter>
@@ -395,11 +401,17 @@
     <ClCompile Include="src\engine\scene\states\SplashState.cpp">
       <Filter>Source Files\engine\scene\states</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\System.cpp">
-      <Filter>Source Files\engine</Filter>
-    </ClCompile>
     <ClCompile Include="src\engine\filesystem\TextureLoader.cpp">
       <Filter>Source Files\engine\filesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\system\System.cpp">
+      <Filter>Source Files\engine\system</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\entity\Entity.cpp">
+      <Filter>Source Files\engine\entity</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\entity\components\CTransform.cpp">
+      <Filter>Source Files\engine\entity\components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
