--- a/Engine/Spire.vcxproj
+++ b/Engine/Spire.vcxproj
@@ -97,12 +97,7 @@
     <ClInclude Include="src\components\CGraphics.h" />
     <ClInclude Include="src\components\CSelectable.h" />
     <ClInclude Include="src\engine\core\EventManager.h" />
-    <ClInclude Include="src\engine\core\helpers\Config.h" />
-    <ClInclude Include="src\engine\core\helpers\Identifier.h" />
-    <ClInclude Include="src\engine\core\helpers\Keyboard.h" />
-    <ClInclude Include="src\engine\core\helpers\Mouse.h" />
-    <ClInclude Include="src\engine\core\helpers\Pipeline.h" />
-    <ClInclude Include="src\engine\core\Input.h" />
+    <ClInclude Include="src\engine\core\Identifier.h" />
     <ClInclude Include="src\engine\core\Logger.h" />
     <ClInclude Include="src\engine\core\ResourceManager.h" />
     <ClInclude Include="src\engine\Engine.h" />
@@ -114,6 +109,7 @@
     <ClInclude Include="src\engine\entity\IOwnership.h" />
     <ClInclude Include="src\engine\entity\IUniqueIdentifier.h" />
     <ClInclude Include="src\engine\filesystem\AnimationLoader.h" />
+    <ClInclude Include="src\engine\filesystem\Config.h" />
     <ClInclude Include="src\engine\filesystem\FileTypeLoader.h" />
     <ClInclude Include="src\engine\filesystem\Md5Loader.h" />
     <ClInclude Include="src\engine\filesystem\ModelLoader.h" />
@@ -121,8 +117,13 @@
     <ClInclude Include="src\engine\filesystem\TextureLoader.h" />
     <ClInclude Include="src\engine\graphics\BaseWindow.h" />
     <ClInclude Include="src\engine\graphics\Camera.h" />
+    <ClInclude Include="src\engine\graphics\Pipeline.h" />
     <ClInclude Include="src\engine\graphics\window\GLFWWindow.h" />
     <ClInclude Include="src\engine\graphics\window\QtWindow.h" />
+    <ClInclude Include="src\engine\input\IInputListener.h" />
+    <ClInclude Include="src\engine\input\InputListener.h" />
+    <ClInclude Include="src\engine\input\Keyboard.h" />
+    <ClInclude Include="src\engine\input\Mouse.h" />
     <ClInclude Include="src\engine\math\Vec3.h" />
     <ClInclude Include="src\engine\resources\BaseAnimation.h" />
     <ClInclude Include="src\engine\resources\CollisionBoxes.h" />
@@ -153,26 +154,26 @@
     <ClCompile Include="src\components\CGraphics.cpp" />
     <ClCompile Include="src\components\CSelectable.cpp" />
     <ClCompile Include="src\engine\core\EventManager.cpp" />
-    <ClCompile Include="src\engine\core\helpers\Config.cpp" />
-    <ClCompile Include="src\engine\core\helpers\Identifier.cpp" />
-    <ClCompile Include="src\engine\core\helpers\Keyboard.cpp" />
-    <ClCompile Include="src\engine\core\helpers\Mouse.cpp" />
-    <ClCompile Include="src\engine\core\helpers\Pipeline.cpp" />
-    <ClCompile Include="src\engine\core\Input.cpp" />
+    <ClCompile Include="src\engine\core\Identifier.cpp" />
     <ClCompile Include="src\engine\core\Logger.cpp" />
     <ClCompile Include="src\engine\core\ResourceManager.cpp" />
     <ClCompile Include="src\engine\Engine.cpp" />
     <ClCompile Include="src\engine\entity\components\CTransform.cpp" />
     <ClCompile Include="src\engine\entity\Entity.cpp" />
     <ClCompile Include="src\engine\filesystem\AnimationLoader.cpp" />
+    <ClCompile Include="src\engine\filesystem\Config.cpp" />
     <ClCompile Include="src\engine\filesystem\FileTypeLoader.cpp" />
     <ClCompile Include="src\engine\filesystem\Md5Loader.cpp" />
     <ClCompile Include="src\engine\filesystem\ModelLoader.cpp" />
     <ClCompile Include="src\engine\filesystem\ObjLoader.cpp" />
     <ClCompile Include="src\engine\filesystem\TextureLoader.cpp" />
     <ClCompile Include="src\engine\graphics\Camera.cpp" />
+    <ClCompile Include="src\engine\graphics\Pipeline.cpp" />
     <ClCompile Include="src\engine\graphics\window\GLFWWindow.cpp" />
     <ClCompile Include="src\engine\graphics\window\QtWindow.cpp" />
+    <ClCompile Include="src\engine\input\InputListener.cpp" />
+    <ClCompile Include="src\engine\input\Keyboard.cpp" />
+    <ClCompile Include="src\engine\input\Mouse.cpp" />
     <ClCompile Include="src\engine\math\Vec3.cpp" />
     <ClCompile Include="src\engine\resources\BaseAnimation.cpp" />
     <ClCompile Include="src\engine\resources\CollisionBoxes.cpp" />
