Some early work on proper filesystem management

--- a/Engine/Spire.vcxproj
+++ b/Engine/Spire.vcxproj
@@ -110,6 +110,11 @@
     <ClInclude Include="src\engine\entity\IUniqueIdentifier.h" />
     <ClInclude Include="src\engine\filesystem\AnimationLoader.h" />
     <ClInclude Include="src\engine\filesystem\Config.h" />
+    <ClInclude Include="src\engine\filesystem\exception\FileNotFoundException.h" />
+    <ClInclude Include="src\engine\filesystem\exception\OrphanedFileHandleException.h" />
+    <ClInclude Include="src\engine\filesystem\FileHandle.h" />
+    <ClInclude Include="src\engine\filesystem\FileManager.h" />
+    <ClInclude Include="src\engine\filesystem\FileSystemException.h" />
     <ClInclude Include="src\engine\filesystem\FileTypeLoader.h" />
     <ClInclude Include="src\engine\filesystem\Md5Loader.h" />
     <ClInclude Include="src\engine\filesystem\ModelLoader.h" />
@@ -137,12 +142,26 @@
     <ClInclude Include="src\engine\resources\Skybox.h" />
     <ClInclude Include="src\engine\resources\Text.h" />
     <ClInclude Include="src\engine\resources\Texture.h" />
+    <ClInclude Include="src\engine\resources\valve\Brush.h" />
+    <ClInclude Include="src\engine\resources\valve\Entity.h" />
+    <ClInclude Include="src\engine\resources\valve\Mdl.h" />
+    <ClInclude Include="src\engine\resources\valve\Vmf.h" />
+    <ClInclude Include="src\engine\resources\valve\Vmt.h" />
+    <ClInclude Include="src\engine\resources\valve\Vtf.h" />
     <ClInclude Include="src\engine\scene\Scene.h" />
     <ClInclude Include="src\engine\scene\SceneManager.h" />
     <ClInclude Include="src\engine\scene\states\SplashState.h" />
+    <ClInclude Include="src\engine\scene\valve\Vmf.h" />
     <ClInclude Include="src\engine\system\ISystem.h" />
     <ClInclude Include="src\engine\system\System.h" />
-    <ClInclude Include="src\Game.h" />
+    <ClInclude Include="src\systems\renderer\DeferredPass.h" />
+    <ClInclude Include="src\systems\renderer\DeferredRenderer.h" />
+    <ClInclude Include="src\systems\renderer\DeferredShaders.h" />
+    <ClInclude Include="src\systems\renderer\DirectionalLightPass.h" />
+    <ClInclude Include="src\systems\renderer\GeometryPass.h" />
+    <ClInclude Include="src\systems\renderer\PointLightPass.h" />
+    <ClInclude Include="src\systems\renderer\StencilPass.h" />
+    <ClInclude Include="src\systems\renderer\TransparencyPass.h" />
     <ClInclude Include="src\systems\SAnimation.h" />
     <ClInclude Include="src\systems\SCollision.h" />
     <ClInclude Include="src\systems\SGraphics.h" />
@@ -162,6 +181,8 @@
     <ClCompile Include="src\engine\entity\Entity.cpp" />
     <ClCompile Include="src\engine\filesystem\AnimationLoader.cpp" />
     <ClCompile Include="src\engine\filesystem\Config.cpp" />
+    <ClCompile Include="src\engine\filesystem\FileHandle.cpp" />
+    <ClCompile Include="src\engine\filesystem\FileManager.cpp" />
     <ClCompile Include="src\engine\filesystem\FileTypeLoader.cpp" />
     <ClCompile Include="src\engine\filesystem\Md5Loader.cpp" />
     <ClCompile Include="src\engine\filesystem\ModelLoader.cpp" />
@@ -190,8 +211,14 @@
     <ClCompile Include="src\engine\scene\SceneManager.cpp" />
     <ClCompile Include="src\engine\scene\states\SplashState.cpp" />
     <ClCompile Include="src\engine\system\System.cpp" />
-    <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\systems\renderer\DeferredPass.cpp" />
+    <ClCompile Include="src\systems\renderer\DeferredRenderer.cpp" />
+    <ClCompile Include="src\systems\renderer\DirectionalLightPass.cpp" />
+    <ClCompile Include="src\systems\renderer\GeometryPass.cpp" />
+    <ClCompile Include="src\systems\renderer\PointLightPass.cpp" />
+    <ClCompile Include="src\systems\renderer\StencilPass.cpp" />
+    <ClCompile Include="src\systems\renderer\TransparencyPass.cpp" />
     <ClCompile Include="src\systems\SAnimation.cpp" />
     <ClCompile Include="src\systems\SCollision.cpp" />
     <ClCompile Include="src\systems\SGraphics.cpp" />
